--- a/Customer-Frontend/src/pages/Authentication/Auth.css
+++ b/Customer-Frontend/src/pages/Authentication/Auth.css
@@ -1,3 +1,7 @@
+.container {
+  margin-top: -75px;
+}
+
 .auth-container {
   max-width: 400px;
   margin: 2rem auto;
@@ -6,12 +10,15 @@
   background: white;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 50px;
 }
 
 .auth-container h2 {
   text-align: center;
   margin-bottom: 1.5rem;
-  color: #333;
+  font-family: 'Righteous', cursive;
+  color: #5D8191;
+  font-size: 32px;
 }
 
 .form-group {
