--- a/Customer-Frontend/src/components/CateringCard/CateringCard.css
+++ b/Customer-Frontend/src/components/CateringCard/CateringCard.css
@@ -1,8 +1,7 @@
-
 .catering-card-link {
-  text-decoration: none;
+  text-decoration: none; 
   color: inherit; 
-  display: block;
+  display: block; 
 }
 
 .catering-card {
@@ -15,7 +14,8 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  transition: transform 0.2s ease-in-out; 
+  transition: transform 0.2s ease-in-out;
+  padding: 10px;
 }
 
 .catering-card:hover {
@@ -24,7 +24,7 @@
 
 .catering-image {
   width: 100%;
-  height: 200px; 
+  height: 150px; 
   object-fit: cover; 
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
@@ -42,21 +42,25 @@
   font-weight: bold;
   color: #333;
   margin: 0;
+  align-self: start;
+  margin-bottom: -5px;
 }
 
 .catering-specs {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+  display: flex; 
+  justify-content: space-between;
   font-family: 'Arial', sans-serif;
   font-size: 15px;
   color: #555;
-  margin-top: 10px; 
+  margin: 5px;
+  margin-top: 15px;
+  margin-bottom: -10px;
 }
 
 
+
 .book-button {
-  background: linear-gradient(to right, #3498db); 
+  background: #5D8191; 
   color: white;
   border: none;
   border-radius: 8px;
@@ -68,6 +72,9 @@
   transition: opacity 0.2s ease-in-out;
 }
 
-.book-button:hover {
-  opacity: 0.9;
+.book-button:hover{
+  background-color: #2A3439 !important;
+  color: white;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(52, 152, 219, 0.3);
 }
