--- a/Customer-Frontend/src/components/CateringsList/CateringsList.css
+++ b/Customer-Frontend/src/components/CateringsList/CateringsList.css
@@ -12,13 +12,14 @@
   display: flex; 
   flex-direction: column;
   align-items: center; 
+  margin-top: 50px;
 }
 
 .caterings-header h2 {
   font-size: 2.2rem; 
   color: #2c3e50;
   margin-bottom: 1rem; 
-  font-weight: 600;
+  font-weight: bold;
 }
 
 /* Sort Options Styles - NEW */
