--- a/Customer-Frontend/src/pages/MyBooking/myBooking.css
+++ b/Customer-Frontend/src/pages/MyBooking/myBooking.css
@@ -191,3 +191,45 @@ body {
     font-size: 28px;
   }
 } */
+
+.booking-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  list-style-type: none;
+  margin: 0px 200px;
+}
+.booking-item{
+  background-color: #e9ecef;
+  padding: 20px 0;
+}
+
+.booking-item {
+  background-color: #e9ecef;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease;
+}
+
+.booking-item:hover {
+  transform: translateY(-3px);
+}
+
+.booking-item strong {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: #212529;
+}
+
+.booking-item div {
+  margin-bottom: 6px;
+  color: #495057;
+  font-size: 15px;
+  line-height: 1.4;
+}
+
+h1 {
+  margin-top: 50px;
+}
